@@ -2,32 +2,41 @@ package galyleo.dependency;
 
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonPropertyOrder;
+import com.fasterxml.jackson.core.JsonGenerator;
+import com.fasterxml.jackson.core.JsonParser;
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.DeserializationContext;
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.MapperFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
-import com.fasterxml.jackson.databind.annotation.JsonSerialize;
+import com.fasterxml.jackson.databind.SerializerProvider;
+import com.fasterxml.jackson.databind.deser.std.StdDeserializer;
+import com.fasterxml.jackson.databind.module.SimpleModule;
+import com.fasterxml.jackson.databind.node.ObjectNode;
+import com.fasterxml.jackson.databind.ser.std.StdSerializer;
 import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
 import com.fasterxml.jackson.dataformat.yaml.YAMLGenerator;
+import java.io.File;
 import java.io.IOException;
 import java.io.OutputStream;
-import java.net.URL;
 import java.util.LinkedHashSet;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.function.Consumer;
 import java.util.function.Function;
-import java.util.stream.Stream;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 import lombok.ToString;
 import lombok.extern.log4j.Log4j2;
-import org.apache.maven.artifact.ArtifactUtils;
-import org.apache.maven.artifact.DefaultArtifact;
-import org.apache.maven.settings.Repository;
+import org.eclipse.aether.artifact.Artifact;
+import org.eclipse.aether.artifact.DefaultArtifact;
+import org.eclipse.aether.graph.Dependency;
+import org.eclipse.aether.repository.RemoteRepository;
 
-import static java.util.stream.Collectors.joining;
 import static java.util.stream.Collectors.toSet;
-import static org.apache.maven.artifact.ArtifactUtils.versionlessKey;
+import static org.eclipse.aether.util.artifact.ArtifactIdUtils.toVersionlessId;
 
 /**
  * Target class for YAML representation of POM elements.
@@ -44,8 +53,14 @@ public class POM {
     private static final YAMLFactory YAML_FACTORY =
         new YAMLFactory()
         .enable(YAMLGenerator.Feature.WRITE_DOC_START_MARKER);
+    private static final SimpleModule MODULE =
+        new SimpleModule()
+        .addDeserializer(Dependency.class, new DependencyDeserializer())
+        .addSerializer(Dependency.class, new DependencySerializer())
+        .addDeserializer(RemoteRepository.class, new RemoteRepositoryDeserializer());
     private static final ObjectMapper OBJECT_MAPPER =
         new ObjectMapper(YAML_FACTORY)
+        .registerModule(MODULE)
         .setSerializationInclusion(JsonInclude.Include.NON_EMPTY)
         .enable(MapperFeature.ACCEPT_CASE_INSENSITIVE_VALUES)
         .enable(SerializationFeature.INDENT_OUTPUT);
@@ -80,7 +95,7 @@ public class POM {
     private String localRepository = null;
     private Boolean interactiveMode = null;
     private Boolean offline = null;
-    private Set<Repository> repositories = new LinkedHashSet<>();
+    private Set<RemoteRepository> repositories = new LinkedHashSet<>();
     private Set<Dependency> dependencies = new LinkedHashSet<>();
 
     /**
@@ -110,11 +125,12 @@ public class POM {
 
         var keys =
             that.getDependencies().stream()
-            .map(t -> versionlessKey(t))
+            .map(Dependency::getArtifact)
+            .map(t -> toVersionlessId(t))
             .collect(toSet());
 
         this.getDependencies()
-            .removeIf(t -> keys.contains(versionlessKey(t)));
+            .removeIf(t -> keys.contains(toVersionlessId(t.getArtifact())));
         this.getDependencies().addAll(that.getDependencies());
     }
 
@@ -141,65 +157,88 @@ public class POM {
         OBJECT_MAPPER.writeValue(out, this);
     }
 
-    /**
-     * {@link POM} {@link Dependency Dependency}
-     * {@link DefaultArtifact Artifact}.
-     *
-     * {@bean.info}
-     */
-    @JsonSerialize(as = SerializedDependency.class)
-    public static class Dependency extends DefaultArtifact implements SerializedDependency {
-
-        /**
-         * No-argument constructor.
-         */
-        public Dependency() { this(new String[] { }); }
-
-        /**
-         * G-A-V constructor.
-         *
-         * @param       gav     The "{@code groupId:artifactId:version}"
-         *                      {@link String}.
-         */
-        public Dependency(String gav) { this(gav.split(":")); }
-
-        /**
-         * Construct from "{@code groupId}", "{@code artifactId}", and
-         * "{@code version}".
-         *
-         * @param       g       The "{@code groupId}" {@link String}.
-         * @param       a       The "{@code artifactId}" {@link String}.
-         * @param       v       The "{@code version}" {@link String}.
-         */
-        public Dependency(String g, String a, String v) {
-            this(new String[] { g, a, v });
-        }
-
-        private Dependency(String[] argv) {
-            super((argv.length > 0) ? argv[0] : "unknown",
-                  (argv.length > 1) ? argv[1] : "unknown",
-                  (argv.length > 2) ? argv[2] : LATEST_VERSION,
-                  (argv.length > 3) ? argv[3] : "runtime",
-                  (argv.length > 4) ? argv[4] : "jar",
-                  (argv.length > 5) ? argv[5] : "",
-                  null);
-        }
-
-        @Override
-        public String toString() { return ArtifactUtils.key(this); }
+    private static String asText(JsonNode node, String name) {
+        return asText(node, name, null);
     }
 
-    /**
-     * {@link POM} {@link Dependency Dependency} {@link JsonSerialize}
-     * annotation argument type.
-     */
-    @JsonPropertyOrder({ "groupId", "artifactId", "version", "type" })
-    public static interface SerializedDependency {
-        String getGroupId();
-        String getArtifactId();
-        String getVersion();
-        String getScope();
-        String getType();
-        String getClassifier();
+    private static String asText(JsonNode node, String name, String defaultValue) {
+        return node.has(name) ? node.get(name).asText() : defaultValue;
+    }
+
+    @ToString
+    private static class DependencyDeserializer extends StdDeserializer<Dependency> {
+
+        public DependencyDeserializer() { super(Dependency.class); }
+
+        @Override
+        public Dependency deserialize(JsonParser parser,
+                                      DeserializationContext context) throws IOException,
+                                                                             JsonProcessingException {
+            JsonNode node = parser.getCodec().readTree(parser);
+            Artifact artifact = null;
+
+            if (node instanceof ObjectNode) {
+                artifact =
+                    new DefaultArtifact(asText(node, "groupId"),
+                                        asText(node, "artifactId"),
+                                        asText(node, "classifier"),
+                                        asText(node, "type", "jar"),
+                                        asText(node, "version"),
+                                        Map.of(), (File) null);
+            } else {
+                var strings = node.asText().split(":");
+
+                artifact =
+                    new DefaultArtifact(strings[0], strings[1],
+                                        null, "jar", strings[2],
+                                        Map.of(), (File) null);
+            }
+
+            return new Dependency(artifact, asText(node, "scope", "runtime"));
+        }
+    }
+
+    @ToString
+    private static class DependencySerializer extends StdSerializer<Dependency> {
+
+        public DependencySerializer() { super(Dependency.class); }
+
+        @Override
+        public void serialize(Dependency value, JsonGenerator generator,
+                              SerializerProvider provider) throws IOException,
+                                                                  JsonProcessingException {
+            generator.writeString(value.getArtifact().toString());
+        }
+    }
+
+    @ToString
+    private static class RemoteRepositoryDeserializer extends StdDeserializer<RemoteRepository> {
+
+        public RemoteRepositoryDeserializer() { super(RemoteRepository.class); }
+
+        @Override
+        public RemoteRepository deserialize(JsonParser parser,
+                                            DeserializationContext context) throws IOException,
+                                                                                   JsonProcessingException {
+            JsonNode node = parser.getCodec().readTree(parser);
+            var builder =
+                new RemoteRepository.Builder(asText(node, "id"),
+                                             asText(node, "layout"),
+                                             asText(node, "url"));
+
+            if (node.has("releases")) {
+                /*
+                 * TBD
+                 */
+            }
+
+            if (node.has("snapshots")) {
+                /*
+                 * TBD
+                 */
+            }
+
+            return builder.build();
+        }
     }
 }
