@@ -1,10 +1,0 @@
-/**
- * Aether-specific components for Galyleo dependency management classes.
- *
- * @author {@link.uri mailto:ball@hcf.dev Allen D. Ball}
- * @version $Revision$
- */
-@Manifest.Section
-package galyleo.dependency.aether;
-
-import ball.annotation.Manifest;
