@@ -1,5 +1,9 @@
 2021-02-23  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/galyleo/dependency/POM.java:
+	Use org.eclipse.aether Dependency and RemoteRepository in
+	interfaces.
+
 	* src/main/java/galyleo/shell/Shell.java:
 	In resolve(POM), update the JShell classpath with newly resolved
 	files.
